# ROS-NAVIGATION-WITH-IMU-SENSOR-AND-MAGNETOMETER

./: README.txt
src/analysis/: Files Defination - README.txt
src/analysis/Support Files/Part1/: custom_msg_euler.py  imu.m  imu_parsed_data.bag  new_imu.xlsx  new_mag.xlsx  rawfile.xlsx
src/analysis/Support Files/Part2/: allan.m  custom.csv  extra1.m  fwd.mat  gpsFields.txt  gpsRaw.bag  gpsRaw.txt  gps_velocity.mat  imu_acc.mat  lldistkm.m  new_yaw.mat  temp1.m  temp2.m  untitled5.m
src/analysis/Support Files/Part2/Bagfiles and CSV files/: 2021-03-05-20-07-16.bag  gpsFields.bag  gpsFields.csv
src/imu_ros_driver/: CMakeLists.txt  package.xml
src/imu_ros_driver/scripts/: gps_parser.py  imu_data.py
