<?xml version="1.0"?>
<package format="2">
  <name>imu_ros_driver</name>
  <version>0.0.0</version>
  <description>The imu_ros_driver package</description>

  <maintainer email="patel.rud@northeastern.edu">Rudra Patel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/imu_ros_driver</url> -->
  <author email="patel.rud@northeastern.edu">Rudra Patel</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
